--- a/package.json
+++ b/package.json
@@ -6,24 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev --dir app/emails"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.28",
+    "@react-email/tailwind": "1.0.2",
     "framer-motion": "^11.2.10",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "^14.2.4",
     "next-intl": "^3.25.0",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-grid-gallery": "^1.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
     "react-modal-video": "^2.0.1",
     "react-photo-album": "^2.3.1",
     "react-responsive": "^10.0.0",
+    "resend": "^4.0.1",
     "sass": "^1.77.1",
     "sharp": "^0.33.4",
     "swiper": "^11.1.3",
@@ -32,6 +37,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "react-email": "3.0.2",
     "tailwindcss": "^3.4.3"
   }
 }
